--- a/index.html
+++ b/index.html
@@ -4,37 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Carosol</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h2>Sliding an image</h2>
-    <div class="container">
+    <!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="./img/img1.jpg" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="./img/img2.jpg" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="./img/img3.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+    <!-- <h2>Sliding an image</h2> -->
+    <!-- <div class="container">
       <div class="slide-container fade">
         <div class="numbertext">1/3</div>
         <img src="./img/img1.jpg" alt="img" />
-        <div class="caption">image caption</div>
+        <div class="caption">learn Javascirpt </div>
       </div>
       <div class="slide-container fade">
         <div class="numbertext">2/3</div>
         <img src="./img/img2.jpg" alt="img" />
-        <div class="caption">image caption</div>
+        <div class="caption">Image hositng is best</div>
       </div>
       <div class="slide-container fade">
         <div class="numbertext">3/3</div>
         <img src="./img/img3.jpg" alt="img" />
-        <div class="caption">image caption</div>
+        <div class="caption">Take care of your elders!</div>
       </div>
       <!-- next and prev button -->
-      <a class="prev" onclick="plusSlider(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlider(1)">&#10095;</a>
-    </div>
-    <br>
+      <!-- <a class="prev" onclick="plusSlider(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlider(1)">&#10095;</a> -->
+    <!-- </div> --> 
+    <!-- <br> -->
     <!-- dot symbols -->
-    <div>
+    <!-- <div>
         <span class="dot" onclick="currentSlider(1)"></span>
         <span class="dot" onclick="currentSlider(2)"></span>
         <span class="dot" onclick="currentSlider(3)"></span>
-    </div>
+    </div> -->
 
 
 
